[gd_scene load_steps=14 format=2]

[ext_resource path="res://Script/RangedDogEnemy.gd" type="Script" id=1]
[ext_resource path="res://Images/RangeMonster/idle_range.png" type="Texture" id=2]
[ext_resource path="res://Images/RangeMonster/attack_range.png" type="Texture" id=3]
[ext_resource path="res://Sounds/shootFireball.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/RangedHurt1.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/RangedHurt2.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/RangedDead.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Stop",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Attacking",
"speed": 1.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 45.0
height = 80.0

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 690, 640 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 450, 440 )

[sub_resource type="StyleBoxFlat" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.847656, 0.109375, 0.109375, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Corner Radius" ]

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 280, 280 )

[node name="RangedDogEnemy" type="KinematicBody2D"]

scale = Vector2( 0.5, 0.5 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "Attacking"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -23.299, 56.5442 )
rotation = 1.5708
shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Range" type="Area2D" parent="." index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range" index="0"]

position = Vector2( -20, 50 )
shape = SubResource( 3 )

[node name="AttackDistance" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDistance" index="0"]

position = Vector2( -20, 50 )
shape = SubResource( 4 )

[node name="HealthBar" type="ProgressBar" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -80.0
margin_top = -20.0
margin_right = -6.0
margin_bottom = -4.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 5 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "Grow Direction", "Rect", "custom_styles" ]

[node name="BackDistance" type="Area2D" parent="." index="5"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackDistance" index="0"]

position = Vector2( 0, 60 )
shape = SubResource( 6 )

[node name="ShootFireball" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 4 )
volume_db = -5.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Hurt1" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 5 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Hurt2" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 6 )
volume_db = -5.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Dead" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 7 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"


